--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,56 @@
 body {
     background-color: lightgray;
 }
+.btn {
+    appearance: none;
+    background-color: #ffbb00;
+    border: 1px solid rgba(27, 31, 35, .15);
+    border-radius: 6px;
+    box-shadow: rgba(27, 31, 35, .1) 0 1px 0;
+    box-sizing: border-box;
+    color: #fff;
+    cursor: pointer;
+    display: inline-block;
+    font-family: -apple-system,system-ui,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 20px;
+    padding: 6px 16px;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    vertical-align: middle;
+    white-space: nowrap;
+}
+
+.btn:focus:not {
+    box-shadow: none;
+    outline: none;
+}
+.btn:hover {
+    background-color: #ca9605;
+}
+
+.btn:active {
+    background-color: #ffcb3c;
+    box-shadow: rgba(20, 70, 32, .2) 0 1px 0 inset;
+}
+
+.btn:disabled {
+    background-color: #795902;
+    border-color: rgba(27, 31, 35, .1);
+    color: rgba(255, 255, 255, .8);
+    cursor: default;
+}
+
+.body {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center; /* Center text */
+    font-size: 20px;
+}
